--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "/index.js",
-      "use": "@vercel/node"
+      "src": "index.js",
+      "use": "@now/node"
     }
   ],
-  "routes": [{ "src": "/(.*)", "dist": "/" }]
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "index.js"
+    }
+  ]
 }
